--- a/config/linux-librem_common-6.1.8.config
+++ b/config/linux-librem_common-6.1.8.config
@@ -796,7 +796,7 @@ CONFIG_INET=y
 # CONFIG_IP_PNP is not set
 # CONFIG_NET_IPIP is not set
 # CONFIG_NET_IPGRE_DEMUX is not set
-# CONFIG_SYN_COOKIES is not set
+CONFIG_SYN_COOKIES=y
 # CONFIG_NET_IPVTI is not set
 # CONFIG_NET_FOU is not set
 # CONFIG_INET_AH is not set
@@ -1307,7 +1307,7 @@ CONFIG_ETHERNET=y
 # CONFIG_NET_VENDOR_AMD is not set
 # CONFIG_NET_VENDOR_AQUANTIA is not set
 # CONFIG_NET_VENDOR_ARC is not set
-CONFIG_NET_VENDOR_ASIX=y
+# CONFIG_NET_VENDOR_ASIX is not set
 # CONFIG_NET_VENDOR_ATHEROS is not set
 # CONFIG_CX_ECAT is not set
 # CONFIG_NET_VENDOR_BROADCOM is not set
@@ -1316,16 +1316,14 @@ CONFIG_NET_VENDOR_ASIX=y
 # CONFIG_NET_VENDOR_CHELSIO is not set
 # CONFIG_NET_VENDOR_CISCO is not set
 # CONFIG_NET_VENDOR_CORTINA is not set
-CONFIG_NET_VENDOR_DAVICOM=y
+# CONFIG_NET_VENDOR_DAVICOM is not set
 # CONFIG_DNET is not set
 # CONFIG_NET_VENDOR_DEC is not set
 # CONFIG_NET_VENDOR_DLINK is not set
 # CONFIG_NET_VENDOR_EMULEX is not set
-CONFIG_NET_VENDOR_ENGLEDER=y
-# CONFIG_TSNEP is not set
+# CONFIG_NET_VENDOR_ENGLEDER is not set
 # CONFIG_NET_VENDOR_EZCHIP is not set
-CONFIG_NET_VENDOR_FUNGIBLE=y
-# CONFIG_FUN_ETH is not set
+# CONFIG_NET_VENDOR_FUNGIBLE is not set
 # CONFIG_NET_VENDOR_GOOGLE is not set
 # CONFIG_NET_VENDOR_HUAWEI is not set
 # CONFIG_NET_VENDOR_I825XX is not set
@@ -1344,17 +1342,15 @@ CONFIG_E1000E_HWTS=y
 # CONFIG_ICE is not set
 # CONFIG_FM10K is not set
 # CONFIG_IGC is not set
-CONFIG_NET_VENDOR_WANGXUN=y
-# CONFIG_NGBE is not set
-# CONFIG_TXGBE is not set
+# CONFIG_NET_VENDOR_WANGXUN is not set
 # CONFIG_JME is not set
-CONFIG_NET_VENDOR_LITEX=y
+# CONFIG_NET_VENDOR_LITEX is not set
 # CONFIG_NET_VENDOR_MARVELL is not set
 # CONFIG_NET_VENDOR_MELLANOX is not set
 # CONFIG_NET_VENDOR_MICREL is not set
 # CONFIG_NET_VENDOR_MICROCHIP is not set
 # CONFIG_NET_VENDOR_MICROSEMI is not set
-CONFIG_NET_VENDOR_MICROSOFT=y
+# CONFIG_NET_VENDOR_MICROSOFT is not set
 # CONFIG_NET_VENDOR_MYRI is not set
 # CONFIG_FEALNX is not set
 # CONFIG_NET_VENDOR_NI is not set
@@ -1385,7 +1381,7 @@ CONFIG_NET_VENDOR_MICROSOFT=y
 # CONFIG_NET_VENDOR_SYNOPSYS is not set
 # CONFIG_NET_VENDOR_TEHUTI is not set
 # CONFIG_NET_VENDOR_TI is not set
-CONFIG_NET_VENDOR_VERTEXCOM=y
+# CONFIG_NET_VENDOR_VERTEXCOM is not set
 # CONFIG_NET_VENDOR_VIA is not set
 # CONFIG_NET_VENDOR_WIZNET is not set
 # CONFIG_NET_VENDOR_XILINX is not set
@@ -1545,7 +1541,7 @@ CONFIG_SERIAL_8250_RUNTIME_UARTS=4
 # CONFIG_SERIAL_8250_RT288X is not set
 # CONFIG_SERIAL_8250_LPSS is not set
 # CONFIG_SERIAL_8250_MID is not set
-CONFIG_SERIAL_8250_PERICOM=y
+# CONFIG_SERIAL_8250_PERICOM is not set
 
 #
 # Non-8250 serial port support
@@ -2174,9 +2170,7 @@ CONFIG_SYNC_FILE=y
 # CONFIG_STAGING is not set
 # CONFIG_CHROME_PLATFORMS is not set
 # CONFIG_MELLANOX_PLATFORM is not set
-CONFIG_SURFACE_PLATFORMS=y
-# CONFIG_SURFACE_GPE is not set
-# CONFIG_SURFACE_PRO3_BUTTON is not set
+# CONFIG_SURFACE_PLATFORMS is not set
 CONFIG_X86_PLATFORM_DEVICES=y
 # CONFIG_ACPI_WMI is not set
 # CONFIG_ACERHDF is not set
@@ -2386,7 +2380,7 @@ CONFIG_LIBNVDIMM=y
 # CONFIG_BTT is not set
 # CONFIG_DAX is not set
 CONFIG_NVMEM=y
-CONFIG_NVMEM_SYSFS=y
+# CONFIG_NVMEM_SYSFS is not set
 # CONFIG_NVMEM_RMEM is not set
 
 #
@@ -2634,7 +2628,7 @@ CONFIG_CRYPTO_SIMD=y
 #
 # Block ciphers
 #
-# CONFIG_CRYPTO_AES is not set
+CONFIG_CRYPTO_AES=y
 # CONFIG_CRYPTO_AES_TI is not set
 # CONFIG_CRYPTO_ARIA is not set
 # CONFIG_CRYPTO_BLOWFISH is not set
