talos-2 6.6.16 kernel config: deactivate CONFIG_COMPAT (32 bit support)
Signed-off-by: Thierry Laurion <insurgo@riseup.net>

--- a/config/linux-talos-2.config
+++ b/config/linux-talos-2.config
@@ -37,7 +37,6 @@ CONFIG_DEFAULT_INIT=""
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SYSVIPC=y
 CONFIG_SYSVIPC_SYSCTL=y
-CONFIG_SYSVIPC_COMPAT=y
 CONFIG_POSIX_MQUEUE=y
 CONFIG_POSIX_MQUEUE_SYSCTL=y
 # CONFIG_WATCH_QUEUE is not set
@@ -259,7 +258,6 @@ CONFIG_NR_CPUS=2048
 CONFIG_PPC_DOORBELL=y
 # end of Processor support
 
-CONFIG_VDSO32=y
 # CONFIG_CPU_BIG_ENDIAN is not set
 CONFIG_CPU_LITTLE_ENDIAN=y
 CONFIG_PPC64_ELF_ABI_V2=y
@@ -282,7 +280,7 @@ CONFIG_PPC_BARRIER_NOSPEC=y
 CONFIG_PPC_HAS_LBARX_LHARX=y
 CONFIG_EARLY_PRINTK=y
 CONFIG_PANIC_TIMEOUT=180
-CONFIG_COMPAT=y
+# CONFIG_COMPAT is not set
 CONFIG_SCHED_OMIT_FRAME_POINTER=y
 CONFIG_ARCH_MAY_HAVE_PC_FDC=y
 CONFIG_PPC_UDBG_16550=y
@@ -383,6 +381,7 @@ CONFIG_SCHED_HRTICK=y
 # CONFIG_PPC_TRANSACTIONAL_MEM is not set
 # CONFIG_LD_HEAD_STUB_CATCH is not set
 # CONFIG_HOTPLUG_CPU is not set
+CONFIG_INTERRUPT_SANITIZE_REGISTERS=y
 CONFIG_PPC_QUEUED_SPINLOCKS=y
 CONFIG_PPC64_SUPPORTS_MEMORY_FAILURE=y
 CONFIG_ARCH_SUPPORTS_KEXEC=y
@@ -480,8 +479,6 @@ CONFIG_MMU_LAZY_TLB_SHOOTDOWN=y
 CONFIG_ARCH_HAVE_NMI_SAFE_CMPXCHG=y
 CONFIG_ARCH_WEAK_RELEASE_ACQUIRE=y
 CONFIG_ARCH_WANT_IPC_PARSE_VERSION=y
-CONFIG_ARCH_WANT_COMPAT_IPC_PARSE_VERSION=y
-CONFIG_ARCH_WANT_OLD_COMPAT_IPC=y
 CONFIG_HAVE_ARCH_SECCOMP=y
 CONFIG_HAVE_ARCH_SECCOMP_FILTER=y
 # CONFIG_SECCOMP is not set
@@ -509,15 +506,12 @@ CONFIG_SOFTIRQ_ON_OWN_STACK=y
 CONFIG_ARCH_HAS_ELF_RANDOMIZE=y
 CONFIG_HAVE_ARCH_MMAP_RND_BITS=y
 CONFIG_ARCH_MMAP_RND_BITS=14
-CONFIG_HAVE_ARCH_MMAP_RND_COMPAT_BITS=y
-CONFIG_ARCH_MMAP_RND_COMPAT_BITS=7
 CONFIG_PAGE_SIZE_LESS_THAN_256KB=y
 CONFIG_ARCH_WANT_DEFAULT_TOPDOWN_MMAP_LAYOUT=y
 CONFIG_HAVE_RELIABLE_STACKTRACE=y
 CONFIG_HAVE_ARCH_NVRAM_OPS=y
 CONFIG_CLONE_BACKWARDS=y
 CONFIG_OLD_SIGSUSPEND=y
-CONFIG_COMPAT_OLD_SIGACTION=y
 CONFIG_COMPAT_32BIT_TIME=y
 CONFIG_HAVE_ARCH_RANDOMIZE_KSTACK_OFFSET=y
 CONFIG_RANDOMIZE_KSTACK_OFFSET=y
@@ -639,12 +633,12 @@ CONFIG_QUEUED_RWLOCKS=y
 CONFIG_ARCH_HAS_MMIOWB=y
 CONFIG_MMIOWB=y
 CONFIG_ARCH_HAS_NON_OVERLAPPING_ADDRESS_SPACE=y
+CONFIG_ARCH_HAS_SYSCALL_WRAPPER=y
 
 #
 # Executable file formats
 #
 CONFIG_BINFMT_ELF=y
-CONFIG_COMPAT_BINFMT_ELF=y
 CONFIG_ELFCORE=y
 CONFIG_CORE_DUMP_DEFAULT_ELF_HEADERS=y
 CONFIG_BINFMT_SCRIPT=y
