talos-2 kernel 6.6.16: review needed patches and config: cbmem missing, maybe some more patches needs porting
Signed-off-by: Thierry Laurion <insurgo@riseup.net>

--- a/config/linux-talos-2.config
+++ b/config/linux-talos-2.config
@@ -978,7 +978,7 @@ CONFIG_DMA_SHARED_BUFFER=y
 
 # CONFIG_FIRMWARE_MEMMAP is not set
 CONFIG_GOOGLE_FIRMWARE=y
-# CONFIG_GOOGLE_CBMEM is not set
+CONFIG_GOOGLE_CBMEM=y
 CONFIG_GOOGLE_COREBOOT_TABLE=y
 CONFIG_GOOGLE_MEMCONSOLE=y
 CONFIG_GOOGLE_MEMCONSOLE_COREBOOT=y
