ns50: add PR0 chipset locking requirements to board config and coreboot config
Signed-off-by: Thierry Laurion <insurgo@riseup.net>

--- a/boards/nitropad-ns50/nitropad-ns50.config
+++ b/boards/nitropad-ns50/nitropad-ns50.config
@@ -29,7 +29,12 @@ CONFIG_UTIL_LINUX=y
 CONFIG_LVM2=y
 CONFIG_MBEDTLS=y
 CONFIG_PCIUTILS=y
-CONFIG_MSRTOOLS=y
+
+#platform locking finalization (PR0)
+CONFIG_IO386=y
+export CONFIG_FINALIZE_PLATFORM_LOCKING=y
+
+
 #Remote attestation support
 # TPM2 requirements
 CONFIG_TPM2_TSS=y
