--- a/boards/qemu-coreboot-fbwhiptail-tpm2/qemu-coreboot-fbwhiptail-tpm2.config
+++ b/boards/qemu-coreboot-fbwhiptail-tpm2/qemu-coreboot-fbwhiptail-tpm2.config
@@ -4,7 +4,7 @@
 # TPM can be used with a qemu software TPM (TIS, 2.0).
 export CONFIG_COREBOOT=y
 export CONFIG_COREBOOT_VERSION=24.02.01
-export CONFIG_LINUX_VERSION=5.10.214
+export CONFIG_LINUX_VERSION=6.1.8
 
 CONFIG_COREBOOT_CONFIG=config/coreboot-qemu-tpm2.config
 CONFIG_LINUX_CONFIG=config/linux-qemu.config
@@ -45,8 +45,7 @@ CONFIG_UTIL_LINUX=y
 CONFIG_LVM2=y
 CONFIG_MBEDTLS=y
 CONFIG_PCIUTILS=y
-#Runtime tools to write to EC/MSR
-CONFIG_IOTOOLS=y
+#Runtime tools to write to MSR
 CONFIG_MSRTOOLS=y
 #Remote attestation support
 # TPM2 requirements
