config/coreboot-kgpe-d16_workstation-dGPU_oprom.config: deactivate MAINBOARD_FORCE_NATIVE_VGA_INIT, DRIVERS_ASPEED_AST2050 and dependencies
Signed-off-by: Thierry Laurion <insurgo@riseup.net>

--- a/config/coreboot-kgpe-d16_workstation-dGPU_oprom.config
+++ b/config/coreboot-kgpe-d16_workstation-dGPU_oprom.config
@@ -420,17 +420,17 @@ CONFIG_COLLECT_TIMESTAMPS_TSC=y
 #
 # Devices
 #
-CONFIG_HAVE_VGA_TEXT_FRAMEBUFFER=y
-CONFIG_MAINBOARD_HAS_NATIVE_VGA_INIT=y
-CONFIG_MAINBOARD_FORCE_NATIVE_VGA_INIT=y
+# CONFIG_HAVE_VGA_TEXT_FRAMEBUFFER is not set
+# CONFIG_MAINBOARD_HAS_NATIVE_VGA_INIT is not set
+# CONFIG_MAINBOARD_FORCE_NATIVE_VGA_INIT is not set
 # CONFIG_MAINBOARD_HAS_LIBGFXINIT is not set
-CONFIG_MAINBOARD_DO_NATIVE_VGA_INIT=y
+# CONFIG_MAINBOARD_DO_NATIVE_VGA_INIT is not set
 # CONFIG_MULTIPLE_VGA_ADAPTERS is not set
 
 #
 # Display
 #
-CONFIG_VGA_TEXT_FRAMEBUFFER=y
+# CONFIG_VGA_TEXT_FRAMEBUFFER is not set
 CONFIG_SMBUS_HAS_AUX_CHANNELS=y
 CONFIG_PCI=y
 # CONFIG_NO_MMCONF_SUPPORT is not set
@@ -489,8 +489,8 @@ CONFIG_HAVE_USBDEBUG_OPTIONS=y
 # CONFIG_VPD is not set
 # CONFIG_DRIVERS_GENERIC_WIFI is not set
 # CONFIG_DRIVERS_AMD_PI is not set
-CONFIG_DRIVERS_ASPEED_AST2050=y
-CONFIG_DRIVERS_ASPEED_AST_COMMON=y
+# CONFIG_DRIVERS_ASPEED_AST2050 is not set
+# CONFIG_DRIVERS_ASPEED_AST_COMMON is not set
 # CONFIG_DRIVERS_I2C_MAX98373 is not set
 # CONFIG_DRIVERS_I2C_MAX98927 is not set
 # CONFIG_DRIVERS_I2C_PCA9538 is not set
