--- a/config/coreboot-kgpe-d16_workstation-dGPU_oprom.config
+++ b/config/coreboot-kgpe-d16_workstation-dGPU_oprom.config
@@ -1,4 +1,4 @@
-#
+V#
 # Automatically generated file; DO NOT EDIT.
 # coreboot configuration
 #
@@ -15,8 +15,7 @@ CONFIG_COMPILER_GCC=y
 # CONFIG_CCACHE is not set
 # CONFIG_FMD_GENPARSER is not set
 # CONFIG_UTIL_GENPARSER is not set
-CONFIG_USE_OPTION_TABLE=y
-# CONFIG_STATIC_OPTION_TABLE is not set
+# CONFIG_USE_OPTION_TABLE is not set
 CONFIG_COMPRESS_RAMSTAGE=y
 CONFIG_INCLUDE_CONFIG_FILE=y
 CONFIG_COLLECT_TIMESTAMPS=y
@@ -89,8 +88,9 @@ CONFIG_BOARD_SPECIFIC_OPTIONS=y
 CONFIG_MAINBOARD_DIR="asus/kgpe-d16"
 CONFIG_MAINBOARD_PART_NUMBER="KGPE-D16"
 CONFIG_MAX_CPUS=32
-CONFIG_CBFS_SIZE=0x1000000
-CONFIG_UART_FOR_CONSOLE=1
+CONFIG_CBFS_SIZE=0x200000
+CONFIG_UART_FOR_CONSOLE=0
+CONFIG_PAYLOAD_CONFIGFILE=""
 CONFIG_MAINBOARD_VENDOR="ASUS"
 CONFIG_APIC_ID_OFFSET=0x0
 CONFIG_HW_MEM_HOLE_SIZEK=0x100000
@@ -99,11 +99,10 @@ CONFIG_HT_CHAIN_END_UNITID_BASE=0x20
 CONFIG_HT_CHAIN_UNITID_BASE=0x0
 CONFIG_IRQ_SLOT_COUNT=13
 CONFIG_VGA_BIOS_ID="1a03,2000"
-# CONFIG_ONBOARD_VGA_IS_PRIMARY is not set
+CONFIG_ONBOARD_VGA_IS_PRIMARY=y
 CONFIG_DIMM_SPD_SIZE=256
 # CONFIG_VGA_BIOS is not set
 CONFIG_MAINBOARD_SERIAL_NUMBER="123456789"
-CONFIG_VGA_BIOS_FILE="3rdparty/blobs/mainboard/asus/kgpe-d16/VGABIOS.bin"
 CONFIG_C_ENV_BOOTBLOCK_SIZE=0x10000
 CONFIG_MAINBOARD_SMBIOS_MANUFACTURER="ASUS"
 CONFIG_DEVICETREE="devicetree.cb"
@@ -151,19 +150,18 @@ CONFIG_MMCONF_BASE_ADDRESS=0xc0000000
 CONFIG_POST_DEVICE=y
 CONFIG_SPI_FLASH_INCLUDE_ALL_DRIVERS=y
 CONFIG_SPI_FLASH_WINBOND=y
-CONFIG_TPM_INIT=y
-# CONFIG_DRIVERS_INTEL_WIFI is not set
+CONFIG_DRIVERS_INTEL_WIFI=y
 CONFIG_DRIVERS_UART_8250IO=y
 CONFIG_DIMM_MAX=4
 CONFIG_TPM_PIRQ=0x0
 CONFIG_TTYS0_LCS=3
 CONFIG_MAINBOARD_SMBIOS_PRODUCT_NAME="KGPE-D16"
-CONFIG_DEFAULT_CONSOLE_LOGLEVEL=8
+CONFIG_DEFAULT_CONSOLE_LOGLEVEL=7
 # CONFIG_USBDEBUG is not set
 CONFIG_IPMI_KCS_REGISTER_SPACING=1
 CONFIG_IPMI_FRU_SINGLE_RW_SZ=16
 CONFIG_MAINBOARD_VERSION="1.0"
-CONFIG_DRIVERS_PS2_KEYBOARD=y
+# CONFIG_DRIVERS_PS2_KEYBOARD is not set
 CONFIG_PCIEXP_L1_SUB_STATE=y
 # CONFIG_NO_POST is not set
 CONFIG_SMBIOS_ENCLOSURE_TYPE=0x03
@@ -171,24 +169,23 @@ CONFIG_HEAP_SIZE=0xc0000
 # CONFIG_CONSOLE_POST is not set
 CONFIG_SUBSYSTEM_VENDOR_ID=0x0000
 CONFIG_SUBSYSTEM_DEVICE_ID=0x0000
-CONFIG_LINUX_COMMAND_LINE="nohz=on console=tty0 earlyprintk=tty0 quiet loglevel=2"
 CONFIG_BOARD_ROMSIZE_KB_2048=y
 # CONFIG_COREBOOT_ROMSIZE_KB_64 is not set
 # CONFIG_COREBOOT_ROMSIZE_KB_128 is not set
 # CONFIG_COREBOOT_ROMSIZE_KB_256 is not set
 # CONFIG_COREBOOT_ROMSIZE_KB_512 is not set
 # CONFIG_COREBOOT_ROMSIZE_KB_1024 is not set
-# CONFIG_COREBOOT_ROMSIZE_KB_2048 is not set
+CONFIG_COREBOOT_ROMSIZE_KB_2048=y
 # CONFIG_COREBOOT_ROMSIZE_KB_4096 is not set
 # CONFIG_COREBOOT_ROMSIZE_KB_6144 is not set
 # CONFIG_COREBOOT_ROMSIZE_KB_8192 is not set
 # CONFIG_COREBOOT_ROMSIZE_KB_10240 is not set
 # CONFIG_COREBOOT_ROMSIZE_KB_12288 is not set
-CONFIG_COREBOOT_ROMSIZE_KB_16384=y
+# CONFIG_COREBOOT_ROMSIZE_KB_16384 is not set
 # CONFIG_COREBOOT_ROMSIZE_KB_32768 is not set
 # CONFIG_COREBOOT_ROMSIZE_KB_65536 is not set
-CONFIG_COREBOOT_ROMSIZE_KB=16384
-CONFIG_ROM_SIZE=0x1000000
+CONFIG_COREBOOT_ROMSIZE_KB=2048
+CONFIG_ROM_SIZE=0x200000
 CONFIG_HAVE_POWER_STATE_AFTER_FAILURE=y
 CONFIG_HAVE_POWER_STATE_PREVIOUS_AFTER_FAILURE=y
 CONFIG_POWER_STATE_DEFAULT_ON_AFTER_FAILURE=y
@@ -226,7 +223,7 @@ CONFIG_VERSTAGE_ADDR=0x2000000
 CONFIG_PCIEXP_ASPM=y
 CONFIG_PCIEXP_COMMON_CLOCK=y
 CONFIG_PCIEXP_CLK_PM=y
-CONFIG_TTYS0_BASE=0x2f8
+CONFIG_TTYS0_BASE=0x3f8
 CONFIG_HPET_MIN_TICKS=0x14
 CONFIG_UART_PCI_ADDR=0x0
 # CONFIG_SOC_MEDIATEK_MT8173 is not set
@@ -300,8 +297,9 @@ CONFIG_SMP=y
 CONFIG_SSE=y
 CONFIG_SUPPORT_CPU_UCODE_IN_CBFS=y
 # CONFIG_USES_MICROCODE_HEADER_FILES is not set
-# CONFIG_CPU_MICROCODE_CBFS_DEFAULT_BINS is not set
-CONFIG_CPU_MICROCODE_CBFS_NONE=y
+CONFIG_USE_CPU_MICROCODE_CBFS_BINS=y
+CONFIG_CPU_MICROCODE_CBFS_DEFAULT_BINS=y
+# CONFIG_CPU_MICROCODE_CBFS_NONE is not set
 CONFIG_CPU_MICROCODE_MULTIPLE_FILES=y
 
 #
@@ -337,7 +335,7 @@ CONFIG_BOOTBLOCK_SOUTHBRIDGE_INIT="southbridge/amd/sb700/bootblock.c"
 # CONFIG_SOUTHBRIDGE_AMD_CIMX_SB800 is not set
 # CONFIG_SOUTHBRIDGE_AMD_CIMX_SB900 is not set
 CONFIG_SOUTHBRIDGE_AMD_SB700=y
-CONFIG_SOUTHBRIDGE_AMD_SB700_33MHZ_SPI=y
+# CONFIG_SOUTHBRIDGE_AMD_SB700_33MHZ_SPI is not set
 CONFIG_SOUTHBRIDGE_AMD_SUBTYPE_SP5100=y
 # CONFIG_SOUTHBRIDGE_AMD_SB700_SKIP_ISA_DMA_INIT is not set
 CONFIG_SOUTHBRIDGE_AMD_SB700_DISABLE_ISA_DMA=y
@@ -370,6 +368,7 @@ CONFIG_SUPERIO_WINBOND_W83667HG_A=y
 # Embedded Controllers
 #
 # CONFIG_EC_GOOGLE_WILCO is not set
+CONFIG_SEABIOS_PS2_TIMEOUT=0
 # CONFIG_CAVIUM_BDK is not set
 # CONFIG_MAINBOARD_HAS_CHROMEOS is not set
 # CONFIG_GOOGLE_SMBIOS_MAINBOARD_VERSION is not set
@@ -421,14 +420,21 @@ CONFIG_COLLECT_TIMESTAMPS_TSC=y
 #
 CONFIG_HAVE_VGA_TEXT_FRAMEBUFFER=y
 CONFIG_MAINBOARD_HAS_NATIVE_VGA_INIT=y
-CONFIG_MAINBOARD_FORCE_NATIVE_VGA_INIT=y
+# CONFIG_MAINBOARD_FORCE_NATIVE_VGA_INIT is not set
 # CONFIG_MAINBOARD_HAS_LIBGFXINIT is not set
-CONFIG_MAINBOARD_DO_NATIVE_VGA_INIT=y
+# CONFIG_MAINBOARD_DO_NATIVE_VGA_INIT is not set
+CONFIG_VGA_ROM_RUN=y
+# CONFIG_NO_GFX_INIT is not set
+# CONFIG_ALWAYS_LOAD_OPROM is not set
+CONFIG_ON_DEVICE_ROM_LOAD=y
+CONFIG_PCI_OPTION_ROM_RUN_REALMODE=y
+# CONFIG_PCI_OPTION_ROM_RUN_YABEL is not set
 # CONFIG_MULTIPLE_VGA_ADAPTERS is not set
 
 #
 # Display
 #
+# CONFIG_FRAMEBUFFER_SET_VESA_MODE is not set
 CONFIG_VGA_TEXT_FRAMEBUFFER=y
 CONFIG_SMBUS_HAS_AUX_CHANNELS=y
 CONFIG_PCI=y
@@ -486,7 +492,8 @@ CONFIG_DRIVERS_UART=y
 CONFIG_HAVE_USBDEBUG=y
 CONFIG_HAVE_USBDEBUG_OPTIONS=y
 # CONFIG_VPD is not set
-# CONFIG_DRIVERS_GENERIC_WIFI is not set
+CONFIG_DRIVERS_GENERIC_WIFI=y
+# CONFIG_USE_SAR is not set
 # CONFIG_DRIVERS_AMD_PI is not set
 CONFIG_DRIVERS_ASPEED_AST2050=y
 CONFIG_DRIVERS_ASPEED_AST_COMMON=y
@@ -547,13 +554,10 @@ CONFIG_VGA=y
 #
 # Trusted Platform Module
 #
-CONFIG_TPM1=y
-# CONFIG_USER_NO_TPM is not set
-CONFIG_USER_TPM1=y
+CONFIG_USER_NO_TPM=y
+# CONFIG_USER_TPM1 is not set
 # CONFIG_USER_TPM2 is not set
-# CONFIG_TPM_DEACTIVATE is not set
-# CONFIG_DEBUG_TPM is not set
-CONFIG_TPM_RDRESP_NEED_DELAY=y
+# CONFIG_TPM_RDRESP_NEED_DELAY is not set
 
 #
 # Memory initialization
@@ -579,7 +583,7 @@ CONFIG_CONSOLE_SERIAL=y
 #
 
 #
-# Serial port base address = 0x2f8
+# Serial port base address = 0x3f8
 #
 # CONFIG_CONSOLE_SERIAL_921600 is not set
 # CONFIG_CONSOLE_SERIAL_460800 is not set
@@ -595,8 +599,8 @@ CONFIG_TTYS0_BAUD=115200
 CONFIG_CONSOLE_CBMEM=y
 CONFIG_CONSOLE_CBMEM_BUFFER_SIZE=0x20000
 # CONFIG_CONSOLE_SPI_FLASH is not set
-CONFIG_DEFAULT_CONSOLE_LOGLEVEL_8=y
-# CONFIG_DEFAULT_CONSOLE_LOGLEVEL_7 is not set
+# CONFIG_DEFAULT_CONSOLE_LOGLEVEL_8 is not set
+CONFIG_DEFAULT_CONSOLE_LOGLEVEL_7=y
 # CONFIG_DEFAULT_CONSOLE_LOGLEVEL_6 is not set
 # CONFIG_DEFAULT_CONSOLE_LOGLEVEL_5 is not set
 # CONFIG_DEFAULT_CONSOLE_LOGLEVEL_4 is not set
@@ -645,15 +649,27 @@ CONFIG_GENERATE_SMBIOS_TABLES=y
 # CONFIG_PAYLOAD_FILO is not set
 # CONFIG_PAYLOAD_GRUB2 is not set
 # CONFIG_PAYLOAD_LINUXBOOT is not set
-# CONFIG_PAYLOAD_SEABIOS is not set
+CONFIG_PAYLOAD_SEABIOS=y
 # CONFIG_PAYLOAD_UBOOT is not set
 # CONFIG_PAYLOAD_YABITS is not set
-CONFIG_PAYLOAD_LINUX=y
+# CONFIG_PAYLOAD_LINUX is not set
 # CONFIG_PAYLOAD_TIANOCORE is not set
-CONFIG_PAYLOAD_FILE="@BOARD_BUILD_DIR@/bzImage"
-CONFIG_LINUX_INITRD="@BOARD_BUILD_DIR@/initrd.cpio.xz"
+CONFIG_PAYLOAD_FILE="payloads/external/SeaBIOS/seabios/out/bios.bin.elf"
+CONFIG_SEABIOS_STABLE=y
+# CONFIG_SEABIOS_MASTER is not set
+# CONFIG_SEABIOS_REVISION is not set
+# CONFIG_SEABIOS_THREAD_OPTIONROMS is not set
+CONFIG_SEABIOS_BOOTORDER_FILE=""
+# CONFIG_SEABIOS_ADD_SERCON_PORT_FILE is not set
+CONFIG_SEABIOS_DEBUG_LEVEL=-1
+
+#
+# Using default SeaBIOS log level
+#
 CONFIG_PAYLOAD_OPTIONS=""
 # CONFIG_PXE is not set
+CONFIG_COMPRESSED_PAYLOAD_LZMA=y
+# CONFIG_COMPRESSED_PAYLOAD_LZ4 is not set
 # CONFIG_PAYLOAD_IS_FLAT_BINARY is not set
 CONFIG_COMPRESS_SECONDARY_PAYLOAD=y
 
@@ -692,12 +708,14 @@ CONFIG_HAVE_DEBUG_SMBUS=y
 # CONFIG_DEBUG_SMBUS is not set
 # CONFIG_DEBUG_MALLOC is not set
 # CONFIG_DEBUG_CONSOLE_INIT is not set
+# CONFIG_REALMODE_DEBUG is not set
 # CONFIG_DEBUG_SPI_FLASH is not set
 # CONFIG_DEBUG_IPMI is not set
 # CONFIG_TRACE is not set
 # CONFIG_DEBUG_BOOT_STATE is not set
 # CONFIG_DEBUG_ADA_CODE is not set
 # CONFIG_HAVE_EM100_SUPPORT is not set
+CONFIG_NO_EDID_FILL_FB=y
 CONFIG_ENABLE_APIC_EXT_ID=y
 CONFIG_WARNINGS_ARE_ERRORS=y
 # CONFIG_POWER_BUTTON_DEFAULT_ENABLE is not set
@@ -713,3 +731,4 @@ CONFIG_NO_STAGE_CACHE=y
 CONFIG_BOOTBLOCK_CUSTOM=y
 CONFIG_HAVE_ROMSTAGE=y
 CONFIG_HAVE_RAMSTAGE=y
+
