coreboot-kgpe-d16_workstation-dGPU_oprom.config: menuconfig shows nothing interesting, saving changes results in this
Signed-off-by: Thierry Laurion <insurgo@riseup.net>

--- a/config/coreboot-kgpe-d16_workstation-dGPU_oprom.config
+++ b/config/coreboot-kgpe-d16_workstation-dGPU_oprom.config
@@ -1,4 +1,4 @@
-V#
+#
 # Automatically generated file; DO NOT EDIT.
 # coreboot configuration
 #
@@ -103,6 +103,7 @@ CONFIG_ONBOARD_VGA_IS_PRIMARY=y
 CONFIG_DIMM_SPD_SIZE=256
 # CONFIG_VGA_BIOS is not set
 CONFIG_MAINBOARD_SERIAL_NUMBER="123456789"
+CONFIG_VGA_BIOS_FILE="3rdparty/blobs/mainboard/asus/kgpe-d16/VGABIOS.bin"
 CONFIG_C_ENV_BOOTBLOCK_SIZE=0x10000
 CONFIG_MAINBOARD_SMBIOS_MANUFACTURER="ASUS"
 CONFIG_DEVICETREE="devicetree.cb"
@@ -420,21 +421,14 @@ CONFIG_COLLECT_TIMESTAMPS_TSC=y
 #
 CONFIG_HAVE_VGA_TEXT_FRAMEBUFFER=y
 CONFIG_MAINBOARD_HAS_NATIVE_VGA_INIT=y
-# CONFIG_MAINBOARD_FORCE_NATIVE_VGA_INIT is not set
+CONFIG_MAINBOARD_FORCE_NATIVE_VGA_INIT=y
 # CONFIG_MAINBOARD_HAS_LIBGFXINIT is not set
-# CONFIG_MAINBOARD_DO_NATIVE_VGA_INIT is not set
-CONFIG_VGA_ROM_RUN=y
-# CONFIG_NO_GFX_INIT is not set
-# CONFIG_ALWAYS_LOAD_OPROM is not set
-CONFIG_ON_DEVICE_ROM_LOAD=y
-CONFIG_PCI_OPTION_ROM_RUN_REALMODE=y
-# CONFIG_PCI_OPTION_ROM_RUN_YABEL is not set
+CONFIG_MAINBOARD_DO_NATIVE_VGA_INIT=y
 # CONFIG_MULTIPLE_VGA_ADAPTERS is not set
 
 #
 # Display
 #
-# CONFIG_FRAMEBUFFER_SET_VESA_MODE is not set
 CONFIG_VGA_TEXT_FRAMEBUFFER=y
 CONFIG_SMBUS_HAS_AUX_CHANNELS=y
 CONFIG_PCI=y
@@ -658,9 +652,15 @@ CONFIG_PAYLOAD_FILE="payloads/external/SeaBIOS/seabios/out/bios.bin.elf"
 CONFIG_SEABIOS_STABLE=y
 # CONFIG_SEABIOS_MASTER is not set
 # CONFIG_SEABIOS_REVISION is not set
+CONFIG_SEABIOS_MENU_WAIT=5000
 # CONFIG_SEABIOS_THREAD_OPTIONROMS is not set
+CONFIG_SEABIOS_VGA_COREBOOT=y
+CONFIG_SEABIOS_OPROM_NOEXEC=y
+# CONFIG_SEABIOS_OPROM_VGAONLY is not set
+# CONFIG_SEABIOS_OPROM_ALL is not set
 CONFIG_SEABIOS_BOOTORDER_FILE=""
 # CONFIG_SEABIOS_ADD_SERCON_PORT_FILE is not set
+CONFIG_PAYLOAD_VGABIOS_FILE="payloads/external/SeaBIOS/seabios/out/vgabios.bin"
 CONFIG_SEABIOS_DEBUG_LEVEL=-1
 
 #
@@ -708,14 +708,12 @@ CONFIG_HAVE_DEBUG_SMBUS=y
 # CONFIG_DEBUG_SMBUS is not set
 # CONFIG_DEBUG_MALLOC is not set
 # CONFIG_DEBUG_CONSOLE_INIT is not set
-# CONFIG_REALMODE_DEBUG is not set
 # CONFIG_DEBUG_SPI_FLASH is not set
 # CONFIG_DEBUG_IPMI is not set
 # CONFIG_TRACE is not set
 # CONFIG_DEBUG_BOOT_STATE is not set
 # CONFIG_DEBUG_ADA_CODE is not set
 # CONFIG_HAVE_EM100_SUPPORT is not set
-CONFIG_NO_EDID_FILL_FB=y
 CONFIG_ENABLE_APIC_EXT_ID=y
 CONFIG_WARNINGS_ARE_ERRORS=y
 # CONFIG_POWER_BUTTON_DEFAULT_ENABLE is not set
@@ -731,4 +729,3 @@ CONFIG_NO_STAGE_CACHE=y
 CONFIG_BOOTBLOCK_CUSTOM=y
 CONFIG_HAVE_ROMSTAGE=y
 CONFIG_HAVE_RAMSTAGE=y
-
