coreboot-kgpe-d16_workstation-dGPU_oprom.config: menuconfig shows nothing interesting, saving changes results in this
Signed-off-by: Thierry Laurion <insurgo@riseup.net>

--- a/config/coreboot-kgpe-d16_workstation-dGPU_oprom.config
+++ b/config/coreboot-kgpe-d16_workstation-dGPU_oprom.config
@@ -27,6 +27,7 @@ CONFIG_NO_RELOCATABLE_RAMSTAGE=y
 # CONFIG_RELOCATABLE_RAMSTAGE is not set
 # CONFIG_UPDATE_IMAGE is not set
 # CONFIG_BOOTSPLASH_IMAGE is not set
+# CONFIG_MEASURED_BOOT is not set
 
 #
 # Mainboard
@@ -99,7 +100,7 @@ CONFIG_HT_CHAIN_END_UNITID_BASE=0x20
 CONFIG_HT_CHAIN_UNITID_BASE=0x0
 CONFIG_IRQ_SLOT_COUNT=13
 CONFIG_VGA_BIOS_ID="1a03,2000"
-CONFIG_ONBOARD_VGA_IS_PRIMARY=y
+# CONFIG_ONBOARD_VGA_IS_PRIMARY is not set
 CONFIG_DIMM_SPD_SIZE=256
 # CONFIG_VGA_BIOS is not set
 CONFIG_MAINBOARD_SERIAL_NUMBER="123456789"
@@ -159,7 +160,6 @@ CONFIG_MAINBOARD_SMBIOS_PRODUCT_NAME="KGPE-D16"
 CONFIG_DEFAULT_CONSOLE_LOGLEVEL=7
 # CONFIG_USBDEBUG is not set
 CONFIG_IPMI_KCS_REGISTER_SPACING=1
-CONFIG_IPMI_FRU_SINGLE_RW_SZ=16
 CONFIG_MAINBOARD_VERSION="1.0"
 # CONFIG_DRIVERS_PS2_KEYBOARD is not set
 CONFIG_PCIEXP_L1_SUB_STATE=y
@@ -420,21 +420,14 @@ CONFIG_COLLECT_TIMESTAMPS_TSC=y
 #
 CONFIG_HAVE_VGA_TEXT_FRAMEBUFFER=y
 CONFIG_MAINBOARD_HAS_NATIVE_VGA_INIT=y
-# CONFIG_MAINBOARD_FORCE_NATIVE_VGA_INIT is not set
+CONFIG_MAINBOARD_FORCE_NATIVE_VGA_INIT=y
 # CONFIG_MAINBOARD_HAS_LIBGFXINIT is not set
-# CONFIG_MAINBOARD_DO_NATIVE_VGA_INIT is not set
-CONFIG_VGA_ROM_RUN=y
-# CONFIG_NO_GFX_INIT is not set
-# CONFIG_ALWAYS_LOAD_OPROM is not set
-CONFIG_ON_DEVICE_ROM_LOAD=y
-CONFIG_PCI_OPTION_ROM_RUN_REALMODE=y
-# CONFIG_PCI_OPTION_ROM_RUN_YABEL is not set
+CONFIG_MAINBOARD_DO_NATIVE_VGA_INIT=y
 # CONFIG_MULTIPLE_VGA_ADAPTERS is not set
 
 #
 # Display
 #
-# CONFIG_FRAMEBUFFER_SET_VESA_MODE is not set
 CONFIG_VGA_TEXT_FRAMEBUFFER=y
 CONFIG_SMBUS_HAS_AUX_CHANNELS=y
 CONFIG_PCI=y
@@ -456,7 +449,6 @@ CONFIG_CRB_TPM_BASE_ADDRESS=0xfed40000
 # CONFIG_MAINBOARD_HAS_CRB_TPM is not set
 # CONFIG_GIC is not set
 CONFIG_IPMI_KCS=y
-CONFIG_IPMI_KCS_TIMEOUT_MS=5000
 # CONFIG_DRIVERS_LENOVO_WACOM is not set
 # CONFIG_RT8168_GET_MAC_FROM_VPD is not set
 # CONFIG_RT8168_SET_LED_MODE is not set
@@ -497,6 +489,7 @@ CONFIG_DRIVERS_GENERIC_WIFI=y
 # CONFIG_DRIVERS_AMD_PI is not set
 CONFIG_DRIVERS_ASPEED_AST2050=y
 CONFIG_DRIVERS_ASPEED_AST_COMMON=y
+# CONFIG_DRIVERS_GENERIC_CBFS_SERIAL is not set
 # CONFIG_DRIVERS_I2C_MAX98373 is not set
 # CONFIG_DRIVERS_I2C_MAX98927 is not set
 # CONFIG_DRIVERS_I2C_PCA9538 is not set
@@ -562,7 +555,6 @@ CONFIG_USER_NO_TPM=y
 #
 # Memory initialization
 #
-# CONFIG_STM is not set
 # CONFIG_ACPI_SATA_GENERATOR is not set
 # CONFIG_ACPI_INTEL_HARDWARE_SLEEP_VALUES is not set
 # CONFIG_ACPI_AMD_HARDWARE_SLEEP_VALUES is not set
@@ -659,8 +651,10 @@ CONFIG_SEABIOS_STABLE=y
 # CONFIG_SEABIOS_MASTER is not set
 # CONFIG_SEABIOS_REVISION is not set
 # CONFIG_SEABIOS_THREAD_OPTIONROMS is not set
+CONFIG_SEABIOS_VGA_COREBOOT=y
 CONFIG_SEABIOS_BOOTORDER_FILE=""
 # CONFIG_SEABIOS_ADD_SERCON_PORT_FILE is not set
+CONFIG_PAYLOAD_VGABIOS_FILE="payloads/external/SeaBIOS/seabios/out/vgabios.bin"
 CONFIG_SEABIOS_DEBUG_LEVEL=-1
 
 #
@@ -708,14 +702,11 @@ CONFIG_HAVE_DEBUG_SMBUS=y
 # CONFIG_DEBUG_SMBUS is not set
 # CONFIG_DEBUG_MALLOC is not set
 # CONFIG_DEBUG_CONSOLE_INIT is not set
-# CONFIG_REALMODE_DEBUG is not set
 # CONFIG_DEBUG_SPI_FLASH is not set
-# CONFIG_DEBUG_IPMI is not set
 # CONFIG_TRACE is not set
 # CONFIG_DEBUG_BOOT_STATE is not set
 # CONFIG_DEBUG_ADA_CODE is not set
 # CONFIG_HAVE_EM100_SUPPORT is not set
-CONFIG_NO_EDID_FILL_FB=y
 CONFIG_ENABLE_APIC_EXT_ID=y
 CONFIG_WARNINGS_ARE_ERRORS=y
 # CONFIG_POWER_BUTTON_DEFAULT_ENABLE is not set
@@ -731,4 +722,3 @@ CONFIG_NO_STAGE_CACHE=y
 CONFIG_BOOTBLOCK_CUSTOM=y
 CONFIG_HAVE_ROMSTAGE=y
 CONFIG_HAVE_RAMSTAGE=y
-
