t440p/w541: move to untested so that people don't flash those without external programmer for now
repro:
docker run -e DISPLAY=$DISPLAY --network host --rm -ti -v $(pwd):$(pwd) -w $(pwd) tlaurion/heads-dev-env:latest -- make BOARD=w541-hotp-maximized board.move_tested_to_untested
docker run -e DISPLAY=$DISPLAY --network host --rm -ti -v $(pwd):$(pwd) -w $(pwd) tlaurion/heads-dev-env:latest -- make BOARD=w541-maximized board.move_tested_to_untested
docker run -e DISPLAY=$DISPLAY --network host --rm -ti -v $(pwd):$(pwd) -w $(pwd) tlaurion/heads-dev-env:latest -- make BOARD=t440p-hotp-maximized board.move_tested_to_untested
docker run -e DISPLAY=$DISPLAY --network host --rm -ti -v $(pwd):$(pwd) -w $(pwd) tlaurion/heads-dev-env:latest -- make BOARD=t440p-maximized board.move_tested_to_untested

Signed-off-by: Thierry Laurion <insurgo@riseup.net>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -411,29 +411,29 @@ workflows:
 
 
       - build:
-          name: t440p-maximized
-          target: t440p-maximized
+          name: UNTESTED_t440p-maximized
+          target: UNTESTED_t440p-maximized
           subcommand: ""
           requires:
             - x230-hotp-maximized
 
       - build:
-          name: t440p-hotp-maximized
-          target: t440p-hotp-maximized
+          name: UNTESTED_t440p-hotp-maximized
+          target: UNTESTED_t440p-hotp-maximized
           subcommand: ""
           requires:
             - x230-hotp-maximized
 
       - build:
-          name: w541-maximized
-          target: w541-maximized
+          name: UNTESTED_w541-maximized
+          target: UNTESTED_w541-maximized
           subcommand: ""
           requires:
             - x230-hotp-maximized
 
       - build:
-          name: w541-hotp-maximized
-          target: w541-hotp-maximized
+          name: UNTESTED_w541-hotp-maximized
+          target: UNTESTED_w541-hotp-maximized
           subcommand: ""
           requires:
             - x230-hotp-maximized
