--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -76,13 +76,13 @@ jobs:
             # Cache for matching modules digest, validated to be exactly the same as in GitHub current commit.
             # This cache was made on top of below caches, if previously existing.
             # If no module definition changed, we reuse this one
-            - nix-docker-heads-modules-and-patches-{{ checksum "./tmpDir/all_modules_and_patches.sha256sums" }}{{ .Environment.CACHE_VERSION }}
+            - V540TU-nix-docker-heads-modules-and-patches-{{ checksum "./tmpDir/all_modules_and_patches.sha256sums" }}{{ .Environment.CACHE_VERSION }}
 
             # Cache for coreboot module (and patches) and musl-cross-make digests (coreboot: triannual release)
-            - nix-docker-heads-coreboot-musl-cross-{{ checksum "./tmpDir/coreboot_musl-cross.sha256sums" }}{{ .Environment.CACHE_VERSION }}
+            - V540TU-nix-docker-heads-coreboot-musl-cross-{{ checksum "./tmpDir/coreboot_musl-cross.sha256sums" }}{{ .Environment.CACHE_VERSION }}
 
             # Cache for musl-cross-make module digest (rarely modified).
-            - nix-docker-heads-musl-cross-{{ checksum "./tmpDir/musl-cross.sha256sums" }}{{ .Environment.CACHE_VERSION }}
+            - V540TU-nix-docker-heads-musl-cross-{{ checksum "./tmpDir/musl-cross.sha256sums" }}{{ .Environment.CACHE_VERSION }}
       - run:
           name: Download and neuter xx20 ME (keep generated GBE and extracted IFD in tree)
           command: |
@@ -173,7 +173,7 @@ jobs:
       - save_cache:
           # Generate cache for the same musl-cross module definition if hash is not previously existing
           # CircleCI removed their wildcard support, so we have to list precise versions to cache in directory names
-          key: nix-docker-heads-musl-cross-{{ checksum "./tmpDir/musl-cross.sha256sums" }}{{ .Environment.CACHE_VERSION }}
+          key: V540TU-nix-docker-heads-musl-cross-{{ checksum "./tmpDir/musl-cross.sha256sums" }}{{ .Environment.CACHE_VERSION }}
           paths:
             - build/ppc64/musl-cross-38e52db8358c043ae82b346a2e6e66bc86a53bc1
             - build/x86/musl-cross-38e52db8358c043ae82b346a2e6e66bc86a53bc1
@@ -182,7 +182,7 @@ jobs:
       - save_cache:
           # Generate cache for the same coreboot and musl-cross-make modules definition if hash is not previously existing
           # CircleCI removed their wildcard support, so we have to list precise versions to cache in directory names
-          key: nix-docker-heads-coreboot-musl-cross-{{ checksum "./tmpDir/coreboot_musl-cross.sha256sums" }}{{ .Environment.CACHE_VERSION }}
+          key: V540TU-nix-docker-heads-coreboot-musl-cross-{{ checksum "./tmpDir/coreboot_musl-cross.sha256sums" }}{{ .Environment.CACHE_VERSION }}
           paths:
             - build/ppc64/coreboot-talos_2
             - build/ppc64/musl-cross-38e52db8358c043ae82b346a2e6e66bc86a53bc1
@@ -195,7 +195,7 @@ jobs:
             - packages
       - save_cache:
           # Generate cache for the exact same modules definitions if hash is not previously existing
-          key: nix-docker-heads-modules-and-patches-{{ checksum "./tmpDir/all_modules_and_patches.sha256sums" }}{{ .Environment.CACHE_VERSION }}
+          key: V540TU-nix-docker-heads-modules-and-patches-{{ checksum "./tmpDir/all_modules_and_patches.sha256sums" }}{{ .Environment.CACHE_VERSION }}
           paths:
             - build
             - crossgcc
@@ -211,38 +211,10 @@ workflows:
       # This step builds musl-cross for x86 architecture, which will be used by subsequent x86 board builds
       - build_and_persist:
           name: x86-musl-cross
-          target: x230-hotp-maximized
+          target: novacustom_v54x_mtl
           subcommand: "musl-cross"
           requires:
             - prep_env
-
-      # This step builds musl-cross for ppc64 architecture, which will be used by subsequent ppc64 board builds
-      - build_and_persist:
-          name: ppc64-musl-cross
-          arch: ppc64
-          target: talos-2
-          subcommand: "musl-cross"
-          requires:
-            - prep_env
-
-      # Below, sequentially build one board for each coreboot version.
-      # The last board in the sequence is the dependency for the parallel boards built at the end, and also save_cache.
-
-      # coreboot 24.02.01
-      - build_and_persist:
-          name: x230-hotp-maximized
-          target: x230-hotp-maximized
-          subcommand: ""
-          requires:
-            - x86-musl-cross
-
-      # coreboot purism
-      - build_and_persist:
-          name: librem_14
-          target: librem_14
-          subcommand: ""
-          requires:
-            - x230-hotp-maximized
 
       # coreboot nitropad
       # Nitropads depending on x230-hotp-maximized cache since kernel is 6.x and coreboot is git is unshared
@@ -250,25 +222,8 @@ workflows:
       # No need to wait further for other board's cache
       # We reuse built modules from x230-hotp-maximized cache only
       - build_and_persist:
-          name: novacustom_nv4x_adl
-          target: novacustom_nv4x_adl
-          subcommand: ""
-          requires:
-            - x86-musl-cross
-
-      # coreboot talos_2
-      - build_and_persist:
-          name: talos-2
-          arch: ppc64
-          target: talos-2
-          subcommand: ""
-          requires:
-            - ppc64-musl-cross
-
-      # coreboot 4.11
-      - build_and_persist:
-          name: librem_l1um
-          target: librem_l1um
+          name: novacustom_v54x_mtl
+          target: novacustom_v54x_mtl
           subcommand: ""
           requires:
             - x86-musl-cross
@@ -277,275 +232,4 @@ workflows:
       # Make sure workspace caches are chainloaded and the last in chain for an arch is saved
       - save_cache:
           requires:
-            - talos-2
-            - librem_14
-
-      # Those onboarding new boards should add their entries below.
-      # coreboot 24.02.01 boards
-      - build:
-          name: x220-hotp-maximized
-          target: x220-hotp-maximized
-          subcommand: ""
-          requires:
-            - x230-hotp-maximized
-
-      - build:
-          name: x220-maximized
-          target: x220-maximized
-          subcommand: ""
-          requires:
-            - x230-hotp-maximized
-
-      - build:
-          name: t420-hotp-maximized
-          target: t420-hotp-maximized
-          subcommand: ""
-          requires:
-            - x230-hotp-maximized
-
-      - build:
-          name: t420-maximized
-          target: t420-maximized
-          subcommand: ""
-          requires:
-            - x230-hotp-maximized
-
-      - build:
-          name: x230-hotp-maximized_usb-kb
-          target: x230-hotp-maximized_usb-kb
-          subcommand: ""
-          requires:
-            - x230-hotp-maximized
-
-      - build:
-          name: t430-hotp-maximized
-          target: t430-hotp-maximized
-          subcommand: ""
-          requires:
-            - x230-hotp-maximized
-
-      - build:
-          name: x230-maximized
-          target: x230-maximized
-          subcommand: ""
-          requires:
-            - x230-hotp-maximized
-
-      #TODO: move away of 24.02.01 coreboot and depend on optiplex specific dasharo commit
-      - build:
-          name: optiplex-7010_9010-maximized
-          target: optiplex-7010_9010-maximized
-          subcommand: ""
-          requires:
-            - x230-hotp-maximized
-
-      - build:
-          name: optiplex-7010_9010-hotp-maximized
-          target: optiplex-7010_9010-hotp-maximized
-          subcommand: ""
-          requires:
-            - x230-hotp-maximized
-
-      - build:
-          name: optiplex-7010_9010_TXT-maximized
-          target: optiplex-7010_9010_TXT-maximized
-          subcommand: ""
-          requires:
-            - x230-hotp-maximized
-
-      - build:
-          name: optiplex-7010_9010_TXT-hotp-maximized
-          target: optiplex-7010_9010_TXT-hotp-maximized
-          subcommand: ""
-          requires:
-            - x230-hotp-maximized
-
-      - build:
-          name: x230-maximized-fhd_edp
-          target: x230-maximized-fhd_edp
-          subcommand: ""
-          requires:
-            - x230-hotp-maximized
-
-      - build:
-          name: x230-hotp-maximized-fhd_edp
-          target: x230-hotp-maximized-fhd_edp
-          subcommand: ""
-          requires:
-            - x230-hotp-maximized
-
-      - build:
-          name: w530-hotp-maximized
-          target: w530-hotp-maximized
-          subcommand: ""
-          requires:
-            - x230-hotp-maximized
-
-      - build:
-          name: t430-maximized
-          target: t430-maximized
-          subcommand: ""
-          requires:
-            - x230-hotp-maximized
-
-      - build:
-          name: w530-maximized
-          target: w530-maximized
-          subcommand: ""
-          requires:
-            - x230-hotp-maximized
-
-      - build:
-          name: t530-maximized
-          target: t530-maximized
-          subcommand: ""
-          requires:
-            - x230-hotp-maximized
-
-      - build:
-          name: t530-hotp-maximized
-          target: t530-hotp-maximized
-          subcommand: ""
-          requires:
-            - x230-hotp-maximized
-
-
-      - build:
-          name: UNTESTED_t440p-maximized
-          target: UNTESTED_t440p-maximized
-          subcommand: ""
-          requires:
-            - x230-hotp-maximized
-
-      - build:
-          name: UNTESTED_t440p-hotp-maximized
-          target: UNTESTED_t440p-hotp-maximized
-          subcommand: ""
-          requires:
-            - x230-hotp-maximized
-
-      - build:
-          name: UNTESTED_w541-maximized
-          target: UNTESTED_w541-maximized
-          subcommand: ""
-          requires:
-            - x230-hotp-maximized
-
-      - build:
-          name: UNTESTED_w541-hotp-maximized
-          target: UNTESTED_w541-hotp-maximized
-          subcommand: ""
-          requires:
-            - x230-hotp-maximized
-
-      - build:
-          name: qemu-coreboot-fbwhiptail-tpm2-hotp
-          target: qemu-coreboot-fbwhiptail-tpm2-hotp
-          subcommand: ""
-          requires:
-            - x230-hotp-maximized
-
-      - build:
-          name: z220-cmt-maximized
-          target: z220-cmt-maximized
-          subcommand: ""
-          requires:
-            - x230-hotp-maximized
-
-      - build:
-          name: z220-cmt-hotp-maximized
-          target: z220-cmt-hotp-maximized
-          subcommand: ""
-          requires:
-            - x230-hotp-maximized
-
-      # coreboot purism
-      # librem boards
-      - build:
-          name: librem_13v2
-          target: librem_13v2
-          subcommand: ""
-          requires:
-            - librem_14
-
-      - build:
-          name: librem_15v3
-          target: librem_15v3
-          subcommand: ""
-          requires:
-            - librem_14
-
-      - build:
-          name: librem_13v4
-          target: librem_13v4
-          subcommand: ""
-          requires:
-            - librem_14
-
-      - build:
-          name: librem_15v4
-          target: librem_15v4
-          subcommand: ""
-          requires:
-            - librem_14
-
-      - build:
-          name: librem_mini
-          target: librem_mini
-          subcommand: ""
-          requires:
-            - librem_14
-
-      - build:
-          name: librem_mini_v2
-          target: librem_mini_v2
-          subcommand: ""
-          requires:
-            - librem_14
-
-      - build:
-          name: librem_11
-          target: librem_11
-          subcommand: ""
-          requires:
-            - librem_14
-
-      # dasharo release
-      - build:
-          name: nitropad-ns50
-          target: nitropad-ns50
-          subcommand: ""
-          requires:
-            - novacustom_nv4x_adl
-
-      # coreboot 4.11
-      - build:
-          name: UNMAINTAINED_kgpe-d16_workstation
-          target: UNMAINTAINED_kgpe-d16_workstation
-          subcommand: ""
-          requires:
-            - librem_l1um
-
-      # coreboot 4.11
-      - build:
-          name: UNMAINTAINED_kgpe-d16_workstation-usb_keyboard
-          target: UNMAINTAINED_kgpe-d16_workstation-usb_keyboard
-          subcommand: ""
-          requires:
-            - librem_l1um
-      
-      # coreboot 4.11
-      - build:
-          name: UNMAINTAINED_kgpe-d16_server
-          target: UNMAINTAINED_kgpe-d16_server
-          subcommand: ""
-          requires:
-            - librem_l1um
-
-      # coreboot 4.11
-      - build:
-          name: UNMAINTAINED_kgpe-d16_server-whiptail
-          target: UNMAINTAINED_kgpe-d16_server-whiptail
-          subcommand: ""
-          requires:
-            - librem_l1um
+            - novacustom_v54x_mtl
